--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
           <p>- Short Bio & Research Interests</p>
         </div>
         <div class="bio-content">
-          <li>  Guangxin Su is currently a Doctor of Philosophy under the supervision of <a href="https://www.cse.unsw.edu.au/~zhangw/"> Prof. Wenjie Zhang</a> (Principal Advisor) and <a href="https://www.cse.unsw.edu.au/~lxue/">Prof. Xuemin Lin</a> in the Data and Knowledge Research Group at University of New South Wales. 
+          <li>  Guangxin Su is currently a Doctor of Philosophy under the supervision of <a href="https://www.cse.unsw.edu.au/~zhangw/"> Prof. Wenjie Zhang</a> (Principal Advisor) and <a href="https://research.unsw.edu.au/people/dr-binghao-li">Dr. Binghao Li</a> in the Data and Knowledge Research Group at University of New South Wales. 
 
           </li>
           <li>
-            His research interests lie in Data management and analytics for graph/network, spatial-temporal and image data. He had one year research experiences based on the Positive-Unlabeled Learning (weakly supervised learning).  
+            His research interests lie in Graph Data Processing, Machine Learning, etc. He had one year research experiences based on the Positive-Unlabeled Learning (weakly supervised learning).  
           </li>
         </div>
       </div>
