--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Time Capsule</title>
+    <title>Guangxin Su's Homepage</title>
+    <link href="images/su.png" >
     <link rel="stylesheet" href="css/home.css" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -135,7 +136,7 @@
           <a href='https://github.com/214159537'><img src='images/github.jpg' class='github' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
           <a href='https://www.linkedin.com/in/guangxin-su-1660851ba/'><img src='images/linkin.jpg' class='linkin' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a>
           <a href='https://drive.google.com/file/d/1Rrrjjs4uoStTe1QfC1V0NEwPZiS-h-45/view?usp=sharing/'><img src='images/cv.png' class='cv' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
-          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -100px; margin-left:205px; "></a>
+          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -250px; margin-left:355px; "></a>
           
         </div>
         
