--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
           <li><a href="https://www.unsw.edu.au/" class="intro-uni">The University of New South Wales</a></li>
           <li class="intro-address1">Sydney NSW 2052</li>
           <li class="intro-address2">AUSTRALIA</li>
-          <li class="intro-email">Email: guangxinsu6 at gmail.com</li>
+          <li class="intro-email">Email: guangxin.su at unsw.edu.au</li>
           <p></p>
           <p></p>
           <a href='https://scholar.google.com/citations?hl=en&user=Y0X4u-QAAAAJ'><img src='images/google.jpg' class='google' style="width:30px; height:30px; margin-top: 5px; margin-left:35px;"></a> 
           <a href='https://github.com/214159537'><img src='images/github.jpg' class='github' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
           <a href='https://www.linkedin.com/in/guangxin-su-1660851ba/'><img src='images/linkin.jpg' class='linkin' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a>
           <a href='https://drive.google.com/file/d/1Rrrjjs4uoStTe1QfC1V0NEwPZiS-h-45/view?usp=sharing/'><img src='images/cv.png' class='cv' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
-          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -350px; margin-left:455px; "></a>
+          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -320px; margin-left:525px; "></a>
           
         </div>
         
