--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
           <p>- Awards</p>
         </div>
         <div class="award-content">
-          <li></li>
+          <li>
+University International Postgraduate Award (UIPA) </li>
         </div>
       </div>
 
