--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
           </li>
           <li>
-            His research interests lie in Graph Data Processing, Machine Learning, etc. He had one year research experiences based on the Positive-Unlabeled Learning (weakly supervised learning).  
+            His research interests lie in Graph Data Processing, Machine Learning, etc. He had one year research experiences based on the Positive-Unlabeled Learning (weakly supervised learning) from July 2020 to June 2021.  
           </li>
         </div>
       </div>
@@ -178,7 +178,7 @@
           <p>- News</p>
         </div>
         <div class="news-content">
-          <li>UNSW PHD</li>
+          <li>Start the PhD Life at UNSW. 2022-02</li>
           <li>Attended the Oxford Machine Learning Summer School. 2021-08 <a href="https://drive.google.com/file/d/1XHFP2Qb03wG6nRpR5gE-v123WBX9f7Wo/view?usp=sharing">[Certificate]</a></li>
           <li>Graduated from the University of Queensland with a Master of Information and Technology. 2021-07 <a href="https://drive.google.com/file/d/1X_8xnm0T5WMYSeSnoxmBGn4lSvG2YCQ7/view?usp=sharing">[Certificate]</a></li>
           <li>1 paper named "Positive-Unlabeled Learning from Imbalanced Data" has been accepted by the IJCAI-21. 2021-04</li>
