--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="experience-content">
           <li>Serving as the invited journal reviewer for Automation in Construction, 2021</li>
-          <li>Machine Learning PTA Internal at Amazon Seattle (Leader: <a href="https://www.linkedin.com/in/hans-yunxiang-zhang-06550128/">Yunxiang Zhang)</a></li>
+          <li>Machine Learning PTA Internal at Amazon Seattle </a></li>
         </div>
       </div>
 
