--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
           <p>- Short Bio & Research Interests</p>
         </div>
         <div class="bio-content">
-          <li>  Guangxin Su is currently a Doctor of Philosophy under the supervision of <a href="https://www.cse.unsw.edu.au/~zhangw/"> Prof. Wenjie Zhang</a> (Principal Advisor) and <a href="https://research.unsw.edu.au/people/dr-binghao-li">Dr. Binghao Li</a> in the Data and Knowledge Research Group at University of New South Wales. 
+          <li>  Guangxin Su is currently a Doctor of Philosophy under the supervision of <a href="https://www.cse.unsw.edu.au/~zhangw/"> Prof. Wenjie Zhang</a> 
+            
+            (Principal Advisor) and <a href="https://research.unsw.edu.au/people/dr-binghao-li">Dr. Binghao Li</a> in the Data 
+            and <a href="https://unswdb.github.io/people.html">Knowledge Research Group</a> at University of New South Wales. 
 
           </li>
           <li>
