--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
           <li class="intro-email">Email: guangxin.su at unsw.edu.au</li>
           <p></p>
           <p></p>
-          <a href='https://scholar.google.com/citations?hl=en&user=Y0X4u-QAAAAJ'><img src='images/google.jpg' class='google' style="width:30px; height:30px; margin-top: 5px; margin-left:35px;"></a> 
+<!--           <a href='https://scholar.google.com/citations?hl=en&user=Y0X4u-QAAAAJ'><img src='images/google.jpg' class='google' style="width:30px; height:30px; margin-top: 5px; margin-left:35px;"></a> 
           <a href='https://github.com/guangxinsuuu'><img src='images/github.jpg' class='github' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
           <a href='https://www.linkedin.com/in/guangxin-su-1660851ba/'><img src='images/linkin.jpg' class='linkin' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a>
           <a href='https://drive.google.com/file/d/1Rrrjjs4uoStTe1QfC1V0NEwPZiS-h-45/view?usp=sharing/'><img src='images/cv.png' class='cv' style="width:30px; height:30px; margin-top: 5px; margin-left:10px;"></a> 
-          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -310px; margin-left:525px; "></a>
+          <a href='main_page.html'><img src='images/me.jpg' alt="Time Capsule Logo" id='logo' style="width:60%; margin-top: -310px; margin-left:525px; "></a> -->
           
         </div>
         
       </div>
-<!--  145-249      -->
+
 <!--       <!-- <div class="introduction2">
         <div>
           <p class="intro-p"> Introduction </p>
